[package]
name = "vtracer"
version = "0.5.0"
authors = ["Chris Tsang <tyt2y7@gmail.com>"]
edition = "2018"
description = "A cmd app to convert images into vector graphics."
license = "MIT OR Apache-2.0"
homepage = "http://www.visioncortex.org/vtracer"
repository = "https://github.com/visioncortex/vtracer/"
categories = ["graphics"]
keywords = ["svg", "computer-graphics"]

[dependencies]
clap = "4.3.2"
image = "0.24.6"
visioncortex = { version = "0.8.0" }
fastrand = "1.9"
